.kubernetes/environments/prod/ingress/alb-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microshop-ingress
  namespace: microshop
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: microshop-ingress-group
spec:
  ingressClassName: alb
  rules:
  - host: auth.ahmetsay.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 8080
  - host: account.ahmetsay.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: account
            port:
              number: 8080
  - host: inventory.ahmetsay.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: inventory
            port:
              number: 8080
  - host: order.ahmetsay.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: order
            port:
              number: 8080
  - host: payment.ahmetsay.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: payment
            port:
              number: 8080
