.kubernetes/environments/prod/ingress/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microshop-ingress
  namespace: microshop
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.redirect-inventory: >
      {"type":"redirect","redirectConfig":{ "host": "#{host}","port": "#{port}","protocol": "#{protocol}","query": "#{query}","path":"/","statusCode":"HTTP_302"}}
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 8080
      - path: /account
        pathType: Prefix
        backend:
          service:
            name: account
            port:
              number: 8080
      - path: /inventory
        pathType: Exact
        backend:
          service:
            name: redirect-inventory
            port:
              name: use-annotation
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order
            port:
              number: 8080
      - path: /payment
        pathType: Prefix
        backend:
          service:
            name: payment
            port:
              number: 8080
