.kubernetes/environments/prod/ingress/microshop-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microshop-ingress
  namespace: microshop
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: common-ingress-group
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
  - host: auth.solidvessel.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 8080
  - host: account.solidvessel.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: account
            port:
              number: 8080
  - host: inventory.solidvessel.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: inventory
            port:
              number: 8080
  - host: order.solidvessel.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: order
            port:
              number: 8080
  - host: payment.solidvessel.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: payment
            port:
              number: 8080
