.kubernetes/environments/prod/ingress/solidvessel-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solidvessel-ingress
  namespace: solidvessel
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: common-ingress-group
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
spec:
  ingressClassName: alb
  rules:
  - host: www.solidvessel.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apisix
            port:
              number: 9080
